@@ -156,6 +156,8 @@ t/85_universal_edit_link.t
 t/86_recent_changes.t
 t/90_css_category_locale_classes.t
 t/91_username_in_templates.t
+t/92_node_name_from_cgi_obj.t
+t/93_redirect_without_spaces.t
 t/templates/15_test.tt
 wiki.cgi
 META.json
