@@ -5,6 +5,9 @@ More detailed changelogs can be found at
 
 0.66    ?
         All templates now have access to the "username" TT variable.
+        Node name parameters in URLs are now accepted with spaces instead of
+          underscores, to take account of people typing manually - these will
+          redirect (303) to the proper URLs with underscores (#114).
         Add CSS classes for each category and locale to the "content" div
           (and hence we now require version 2.24 of Template).
         Switch to using Geo::Coordinates::OSGB/ITM instead of
